// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default values are dedented: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@first.txt": "Lorem ipsum dolor sit amet consectetur adipiscing elit tempor id, hendrerit euismod iaculis convallis ante tincidunt tempus bibendum metus, torquent ac egestas integer erat pharetra vehicula senectus.",
        "i18n://en-us@second.txt": "Lorem ipsum dolor sit amet consectetur adipiscing elit tempor id,
hendrerit euismod iaculis convallis ante tincidunt tempus bibendum
metus, torquent ac egestas integer erat pharetra vehicula senectus.",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`default values are dedented: with value 1`] = `
<div>
  <span
    data-i18n="en-us@first"
  >
    first
  </span>
  <span
    data-i18n="en-us@second"
  >
    second
  </span>
</div>
`;

exports[`edit=false: with value 1`] = `"test"`;

exports[`it allows changing the default/children if also changing the uri: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@first.txt": "first",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@second.txt": "second",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it allows changing the default/children if also changing the uri: first render 1`] = `
<span
  data-i18n="en-us@first"
>
  first
</span>
`;

exports[`it allows changing the default/children if also changing the uri: second render 1`] = `
<span
  data-i18n="en-us@second"
>
  second
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@first.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@second.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it fetches again after changing the uri prop (but not other props): first render 1`] = `
<span
  data-i18n="en-us@first"
>
  first
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): second render 1`] = `
<span
  data-i18n="en-us@second"
>
  second
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): third render (same uri, no edit) 1`] = `"second"`;

exports[`it handles error status codes: error 1`] = `"Failed to fetch content 😞 (500)"`;

exports[`it handles missing nodes in response: missing 1`] = `"Failed to fetch content 😞 (1404)"`;

exports[`it handles rejected requests: error 1`] = `"Failed to fetch content 😞 (-1)"`;

exports[`it renders loading and then the node: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders loading and then the node: loading 1`] = `"Loading…"`;

exports[`it renders loading and then the node: window.DJEDI_NODES 1`] = `
Object {
  "i18n://en-us@test.txt": undefined,
}
`;

exports[`it renders loading and then the node: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  returned text
</span>
`;

exports[`it renders synchronously if the node is already in cache: api call 1`] = `
Array [
  Array [
    "/djedi/load_by_prefix",
    Object {
      "body": Array [
        "home/",
      ],
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders synchronously if the node is already in cache: browser 1`] = `
<span
  data-i18n="en-us@home/intro"
>
  Welcome to our amazing website!
</span>
`;

exports[`it renders synchronously if the node is already in cache: loadByPrefix result 1`] = `
Object {
  "i18n://en-us@home/intro.txt": "Welcome to our amazing website!",
}
`;

exports[`it renders synchronously if the node is already in cache: with value 1`] = `
<span
  data-i18n="en-us@home/intro"
>
  Welcome to our amazing website!
</span>
`;

exports[`it treats node values as HTML: with value 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "A <a href=\\"http://example.com\\">link</a>.",
    }
  }
  data-i18n="en-us@test"
/>
`;

exports[`it warns if changing the default/children: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "first",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it warns if changing the default/children: console.error 1`] = `
Array [
  Array [
    "djedi-react: Changing the default value of a node is not supported.",
    Object {
      "next": "second",
      "prev": "first",
    },
  ],
]
`;

exports[`it warns if changing the default/children: first render 1`] = `
<span
  data-i18n="en-us@test"
>
  test value
</span>
`;

exports[`it warns if changing the default/children: second render (same as first render) 1`] = `
<span
  data-i18n="en-us@test"
>
  test value
</span>
`;

exports[`it warns when passing a non-string as default/children: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "A ,[object Object]",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it warns when passing a non-string as default/children: console.error 1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`children\` of type \`array\` supplied to \`Node\`, expected \`string\`.
    in Node",
  ],
]
`;

exports[`it warns when passing a non-string as default/children: loading 1`] = `"Loading…"`;

exports[`it warns when passing a non-string as default/children: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  returned text
</span>
`;

exports[`the md tag ignores interpolations and warns about them: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "Hello, !",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`the md tag ignores interpolations and warns about them: console.warn 1`] = `
Array [
  Array [
    "djedi-react: Using \`\${foo}\` in a node default value is an anti-pattern: it won't work if the user edits the node. For consistency, your interpolations will be ignored. Did you mean to use \`{foo}\` (without the \`$\`)?",
  ],
]
`;

exports[`the md tag ignores interpolations and warns about them: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  test
</span>
`;

exports[`using the md tag: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "# A heading

Some text with a [link](http://example.com)

> Blockquote

    function codeBlock() {
      return \\"with indentation\\"
    }",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`using the md tag: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  test
</span>
`;
